<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/nameXML"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp"
        android:maxLines="1"
        android:id="@+id/EditText_charName"
        android:labelFor="@id/EditText_charName"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_species"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/textView_charSpec"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/character_s_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_charSpec"
        android:textSize="18sp"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/EditText_charName"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/character_s_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="49dp"
        android:textSize="18sp"
        android:layout_above="@+id/textView_charSpec"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView_charName" />

    <Button
        android:text="Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:id="@+id/Button_next"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        tools:ignore="HardcodedText" />

</RelativeLayout>

