<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/footer"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@id/footer">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/textView_charName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="casual"
                    android:text="@string/textview"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    tools:text="Name" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Spinner
                    android:id="@+id/spinnerSpecies"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center" />

            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:weightSum="3">

                <TextView
                    android:id="@+id/textGold"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textRock"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textWood"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="casual"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="30dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/charGold"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:src="@drawable/gold"
                            android:cropToPadding="false"
                            android:scaleType="fitCenter" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/charStone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:src="@drawable/stone"
                            android:scaleType="fitCenter" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:layout_gravity="center">

                        <ImageView
                            android:id="@+id/charWood"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:src="@drawable/wood"
                            android:scaleType="fitCenter" />
                    </LinearLayout>

                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="2">

                    <ImageView
                        android:id="@+id/characterImage"
                        android:layout_height="match_parent"
                        android:layout_column="0"
                        android:layout_columnSpan="1"
                        android:layout_gravity="center"
                        android:layout_row="0"
                        android:layout_rowSpan="5"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:src="@drawable/c_anime" />

                    <Button
                        android:id="@+id/button_offhand"
                        android:fontFamily="casual"
                        android:text="@string/off_hand"
                        android:layout_column="2"
                        android:layout_columnSpan="1"
                        android:layout_row="0"/>

                    <Button
                        android:id="@+id/button_Weapon"
                        android:fontFamily="casual"
                        android:text="@string/weapon"
                        android:layout_column="2"
                        android:layout_columnSpan="1"
                        android:layout_row="1"/>

                    <Button
                        android:id="@+id/button_Legs"
                        android:fontFamily="casual"
                        android:text="@string/legs"
                        android:layout_column="2"
                        android:layout_columnSpan="1"
                        android:layout_row="2"/>

                    <Button
                        android:id="@+id/button_helm"
                        android:fontFamily="casual"
                        android:text="@string/helm"
                        android:layout_column="2"
                        android:layout_columnSpan="1"
                        android:layout_row="3"/>

                    <Button
                        android:id="@+id/button_chest"
                        android:fontFamily="casual"
                        android:text="@string/chest"
                        android:layout_column="2"
                        android:layout_columnSpan="1"
                        android:layout_row="4"/>


                </GridLayout>
            </TableRow>

        </TableLayout>


    </RelativeLayout>




</RelativeLayout>